--- a/quizdroid/app/src/main/res/layout/activity_answer.xml
+++ b/quizdroid/app/src/main/res/layout/activity_answer.xml
@@ -4,54 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MarvelAnswerOne">
+    tools:context=".Answer">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Marvel Super Heroes: Question 1 Answer"
             android:textSize="20dp"
             />
         <TextView
-            android:id="@+id/marvOneUser"
+            android:id="@+id/answerUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:text="Your Answer"
             android:textSize="15dp"
             />
         <TextView
-            android:id="@+id/marvOneAnswer"
+            android:id="@+id/answerCorrect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:text="Correct Answer"
             android:textSize="15dp"
             />
         <TextView
-            android:id="@+id/marvOneSummary"
+            android:id="@+id/answerSummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:text="Summary"
             android:textSize="15dp"
             />
         <Button
-            android:id="@+id/marvOneNext"
+            android:id="@+id/answerNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Next"
             android:textSize="10dp"
             />
 
