--- a/quizdroid/app/src/main/res/layout/activity_question.xml
+++ b/quizdroid/app/src/main/res/layout/activity_question.xml
@@ -4,65 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhysicsQuestionOne">
+    tools:context=".Question">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/physQuestionOne"
             android:textSize="20dp"
             />
         <RadioGroup
-            android:id="@+id/physQuestionOneRadioOptions"
+            android:id="@+id/questionRadioOptions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <RadioButton
-                android:id="@+id/physQuestionOneCorrect"
+                android:id="@+id/a0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:text="@string/physQuestionOneCorrect"
                 android:textSize="15dp"
                 />
             <RadioButton
-                android:id="@+id/physQuestionOneIncorrect1"
+                android:id="@+id/a1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:text="@string/physQuestionOneIncorrect1"
                 android:textSize="15dp"
                 />
             <RadioButton
-                android:id="@+id/physQuestionOneIncorrect2"
+                android:id="@+id/a2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:text="@string/physQuestionOneIncorrect2"
                 android:textSize="15dp"
                 />
             <RadioButton
-                android:id="@+id/physQuestionOneIncorrect3"
+                android:id="@+id/a3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:text="@string/physQuestionOneIncorrect3"
                 android:textSize="15dp"
                 />
         </RadioGroup>
         <Button
-            android:id="@+id/btnsubmitPhysQuestionOne"
+            android:id="@+id/btnsubmitResponse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -72,4 +68,6 @@
             />
 
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
