--- a/quizdroid/app/src/main/res/layout/activity_topic_overview.xml
+++ b/quizdroid/app/src/main/res/layout/activity_topic_overview.xml
@@ -4,57 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MathAnswerTwo">
+    tools:context=".TopicOverviewActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/topicOverviewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Math: Question 2 Answer"
             android:textSize="20dp"
             />
         <TextView
-            android:id="@+id/mathTwoUser"
+            android:id="@+id/topicOverviewLongDescr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:text="Your Answer"
-            android:textSize="15dp"
-            />
-        <TextView
-            android:id="@+id/mathTwoAnswer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:text="Correct Answer"
-            android:textSize="15dp"
-            />
-        <TextView
-            android:id="@+id/mathTwoSummary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:text="Summary"
             android:textSize="15dp"
             />
         <Button
-            android:id="@+id/mathTwoNext"
+            android:id="@+id/beginQuiz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Next"
+            android:text="Begin"
             android:textSize="10dp"
             />
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
