--- a/quizdroid/app/src/main/res/layout/activity_preferences.xml
+++ b/quizdroid/app/src/main/res/layout/activity_preferences.xml
@@ -26,7 +26,7 @@
             android:id="@+id/prefURL"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:hint="eg. data/questions.json" />
+            android:hint="eg. http://..." />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
